fix state house table cell alignment

--- a/less/slides.less
+++ b/less/slides.less
@@ -622,7 +622,7 @@
             // }
 
             .candidate {
-                width: 30%;
+                width: 28%;
 
                 &.incumbent img {
                     width: 0.8rem;
